# stellar-privacy-pool

./: .gitignore  LICENSE  README.md  docker-compose.yml
django-backend/: .env.example  .gitignore  Dockerfile  manage.py  pytest.ini  requirements.txt
django-backend/api/: __init__.py  serializers.py  tests.py  urls.py  views.py
django-backend/privacy_pool/: __init__.py  admin.py  celery.py  models.py  settings.py  urls.py  wsgi.py
django-backend/scripts/: wait-for-db.sh
docs/: ARCHITECTURE.md
frontend/: .env.example  .gitignore  Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: Dashboard.tsx  DepositModal.tsx  WithdrawModal.tsx
frontend/src/pages/: About.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
k8s/: backend-deployment.yaml
soroban-contracts/privacy_pool_core/: Cargo.toml
soroban-contracts/privacy_pool_core/src/: lib.rs
